<resources>
    <string name="app_name">海印又一城体育汇</string>
    <string name="home">首页</string>
    <string name="orders">订单</string>
    <string name="account">我的</string>
    <string name="charge">充值</string>
    <string name="activity">活动</string>
    <string name="comment">介绍</string>
    <string name="category">分类</string>
    <string name="quick_book">快速订场</string>
    <string name="now_book">预定详情</string>
    <string name="warnning">请选择具体预定信息！</string>
    <string name="tab1">下单</string>
    <string name="tab2">评价</string>
    <string name="hint_date">请选择日期</string>
    <string name="hint_time">请选择时间段</string>
    <string name="hint_count">请选择场地数</string>
    <string name="hint_desc">备注（可选）</string>
    <string name="field_desc_title">场地信息</string>
    <string name="field_desc_content">替换为具体的描述信息，譬如：羽毛球场地为室内场馆，24小时灯光照射，地板为橡胶地板
                                        符合国家标准等等。。。。。。</string>

    <string name="badminton">羽毛球</string>
    <string name="tabletennis">乒乓球</string>
    <string name="basketball">篮球</string>
    <string name="football">足球</string>
    <string name="swimming">游泳</string>
    <string name="tennis">网球</string>

    <string name="badminton_service">羽毛球服务</string>
    <string name="tabletennis_service">乒乓球服务</string>
    <string name="basketball_service">篮球服务</string>
    <string name="football_service">足球服务</string>
    <string name="swimming_service">游泳服务</string>
    <string name="tennis_service">网球服务</string>

    <string name="badminton_introduction">羽毛球介绍</string>
    <string name="tabletennis_introduction">乒乓球介绍</string>
    <string name="basketball_introduction">篮球介绍</string>
    <string name="football_introduction">足球介绍</string>
    <string name="swimming_introduction">游泳介绍</string>
    <string name="tennis_introduction">网球介绍</string>

    <string name="jianjie">简介</string>
    <string name="jianjiecontent">海印又一城体育会是海印集团重力打造的一个提供舒适运动场馆的体育场所，场馆包含多种场地：羽毛球，乒乓球，网球，游泳的常见的体育设施
                                    体育馆还邀请了众多陪练，教练来供用户选择，竭诚为广大新老顾客提供最完美的服务。</string>
    <string name="changdisheshi">场地设施</string>
    <string name="changdisheshicontent">地板：橡胶地板\n灯光：吊灯\n休息室：空调，vip室</string>
    <string name="jiaotong">交通信息</string>
    <string name="jiaotongcontent">地铁：汉溪长隆站</string>
    <string name="phone">020-39193893</string>
    <string name="location">番禺大道北383号海印又一城奥特莱斯广场B座3层</string>

    <string name="login">登录</string>
    <string name="quan">优惠券</string>
    <string name="jifen">积分</string>
    <string name="logout">退出登录</string>
    <string name="balance">账户余额</string>

    <string name="hint_login_username">请输入账号</string>
    <string name="hint_login_password">输入密码</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <string name="register">注册</string>
    <string name="to_register">注册新用户</string>
    <string name="hint_login_password_confirm">再次输入密码</string>
    <string name="wrong_confirm_pwd">密码不一致</string>
    <string name="empty_password">密码不能为空</string>
    <string name="empty_account">账号不能为空</string>
    <string name="login_fail">登录失败，用户名或密码错误！</string>
    <string name="register_fail">注册失败，用户已存在！</string>
    <string name="login_success">登陆成功</string>

    <string name="cancle">取消</string>
    <string name="confirm">确认</string>

    <string name="service_desc_title">服务提供</string>
    <string name="service_desc_content">替换为具体的服务信息：譬如，羽毛球场馆有羽毛球卖，是否免费提供，还是要求，场馆有无WiFi等等</string>

    <string name="search">搜索</string>

    <string name="searchtitle">快速查找</string>

    <string name="take_comment">评价</string>
    <string name="take_delete">删除</string>

    <string name="comment_public">发布</string>
    <string name="comment_cancle">取消</string>

    <string name="write_hint">你对这次球场的使用体验...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
