<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:enabled="true">

        <item android:id="@+id/nav_charge"
            android:icon="@drawable/ic_monetization_on_black_24px"
            android:enabled="true"
            android:title="@string/charge" />

        <item android:id="@+id/nav_activity"
            android:icon="@drawable/ic_group_black_24px"
            android:enabled="true"
            android:title="@string/activity" />

        <item android:id="@+id/nav_comment"
            android:icon="@drawable/ic_comment_black_24px"
            android:enabled="true"
            android:title="@string/comment" />

        <item android:id="@+id/nav_category"
            android:icon="@drawable/ic_format_list_bulleted_black_24px"
            android:enabled="true"
            android:title="@string/category" />

    </group>

</menu>