<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.administrator.omg.PlaceOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:src="@drawable/ic_schedule_black_24px"
                style="@style/orderImagePara" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/orderTextViewPara"
                android:hint="@string/hint_date"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView

                android:src="@drawable/ic_subject_black_24px"
                style="@style/orderImagePara" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/orderTextViewPara"
                android:hint="@string/hint_time"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:src="@drawable/ic_view_quilt_black_24px"
                style="@style/orderImagePara" />

            <TextView
                android:id="@+id/tv_count"
                style="@style/orderTextViewPara"
                android:hint="@string/hint_count"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:src="@drawable/ic_description_black_24px"
                style="@style/orderImagePara" />

            <TextView
                android:id="@+id/tv_desc"
                style="@style/orderTextViewPara"
                android:hint="@string/hint_desc"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/field_desc_title"/>

            <TextView
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_desc_content"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/service_desc_title"/>

            <TextView
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_desc_content"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>