<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright(c) 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:enabled="true">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24px"
            android:enabled="true"
            android:title="@string/home" />

        <item android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_cart_black_24px"
            android:enabled="true"
            android:title="@string/orders" />

        <item android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24px"
            android:enabled="true"
            android:title="@string/account" />

    </group>

</menu>