<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.omg.IntroductionActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/haiyin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jianjie"
            android:textSize="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jianjiecontent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changdisheshi"
            android:textSize="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changdisheshicontent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/jiaotong"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiaotongcontent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_margin="8dp"

                android:layout_height="20dp"
                android:tint="@android:color/black"
                android:src="@drawable/ic_phone_white_24px"/>
            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/phone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"

                android:tint="@android:color/black"
                android:src="@drawable/ic_location_on_white_24px"/>
            <TextView
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/location"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</ScrollView>
