<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/cardViewLayout">

        <android.support.v7.widget.CardView
            android:id="@+id/badminton"
            style="@style/cardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/badminton"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/badminton"
                android:textColor="@color/layout_background"
                android:text="@string/badminton"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/basketball"
            style="@style/cardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/basketball"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basketball"
                android:textColor="@color/layout_background"
                android:text="@string/basketball"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        style="@style/cardViewLayout">

        <android.support.v7.widget.CardView
            android:id="@+id/swimming"
            style="@style/cardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/swimming"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/swimming"
                android:textColor="@color/layout_background"
                android:text="@string/swimming"/>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/tabletennis"
            style="@style/cardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/tabletennis"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tabletennis"
                android:textColor="@color/layout_background"
                android:text="@string/tabletennis"/>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        style="@style/cardViewLayout">

        <android.support.v7.widget.CardView
            android:id="@+id/tennis"
            style="@style/cardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/tennis"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tennis"
                android:textColor="@color/layout_background"
                android:text="@string/tennis"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/football"
            style="@style/cardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/football"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/football"
                android:textColor="@color/layout_background"
                android:text="@string/football"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="70dp"/>-->

</LinearLayout>