<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.omg.History.GiveCommentActivity">

    <EditText
        android:id="@+id/thought"
        android:layout_width="0dp"
        android:lineSpacingExtra="4sp"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:layout_height="110dp"
        android:textSize="17dp"
        android:gravity="top"
        android:hint="@string/write_hint"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/comment_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:background="@drawable/comment_public_background"
        android:text="@string/comment_public"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/thought" />

    <Button
        android:id="@+id/comment_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/comment_cancle_background"
        android:text="@string/comment_cancle"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/comment_public"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/thought" />

</android.support.constraint.ConstraintLayout>
