<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.omg.Account.AccountFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v7.widget.CardView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:layout_width="100dp"
            android:src="@drawable/ic_account_circle_black_24px"
            android:scaleType="fitXY"
            android:tint="@color/colorAccent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/login_text"
            android:text="@string/login"
            android:textSize="18dp"
            android:paddingLeft="5dp"
            android:textColor="@color/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="40dp"/>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="1dp"
        android:layout_height="60dp">

        <ImageView
            android:src="@drawable/ic_account_balance_wallet_black_24px"
            android:tint="@color/balance"
            android:layout_width="60dp"
            android:scaleType="center"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/balance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:text=">"
            android:layout_width="40dp"
            android:gravity="center|left"
            android:layout_height="match_parent"
            android:layout_gravity="end"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/quan"
        android:layout_width="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_height="60dp">

        <ImageView
            android:src="@drawable/ic_local_activity_black_24px"
            android:tint="@color/quan"
            android:layout_width="60dp"
            android:scaleType="center"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/quan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:text=">"
            android:layout_width="40dp"
            android:gravity="center|left"
            android:layout_height="match_parent"
            android:layout_gravity="end"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/jifen"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:src="@drawable/ic_filter_vintage_black_24px"
            android:tint="@color/jifen"
            android:layout_width="60dp"
            android:scaleType="center"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/jifen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:text=">"
            android:layout_width="40dp"
            android:gravity="center|left"
            android:layout_height="match_parent"
            android:layout_gravity="end"/>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:src="@drawable/ic_exit_to_app_black_24px"
            android:tint="@color/logout"
            android:scaleType="center"
            android:layout_width="60dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"/>



    </android.support.v7.widget.CardView>

</LinearLayout>
