<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.omg.Choose.PickActivity">

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/dates_recyclerview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="@color/layout_background"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="0dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
        <!--android:layout_marginLeft="0dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--android:layout_marginRight="0dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"></android.support.v7.widget.RecyclerView>-->

    <RadioGroup
        android:id="@+id/radiogroup"
        android:background="@color/layout_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></RadioGroup>

    <EditText
        android:visibility="gone"
        android:background="@drawable/textview_border"
        android:gravity="top"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/desc"
        android:hint="@string/hint_desc"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/linearLayout2">

        <Button
            android:background="@color/cancle"
            android:id="@+id/btn_date_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancle"
            android:onClick="onClickCancle"
            android:layout_weight="1"/>

        <Button
            android:background="@color/colorAccent"
            android:id="@+id/btn_date_confirm"
            android:layout_width="0dp"
            android:onClick="onClickOk"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onClickCancle"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/radiogroup"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>
